force-app/main/default/objects/Enrollment_Component_Affiliation__c.object
<CustomObject>
    <label>Enrollment Component Affiliation</label>
    <nameField>
        <displayFormat>ECA-{0}</displayFormat>
        <label>Enrollment Component Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Component Affiliation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>