force-app/main/default/objects/Enrollment_Component_Affiliation__c/fields/API_Validated__c.field-meta.xml
<CustomField>
    <fullName>API_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes when user input has been validated by an API</description>
    <label>Input Validated by API</label>
    <type>Checkbox</type>
</CustomField>