force-app/main/default/objects/Enrollment_Component_Affiliation__c/fields/Date_Became_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Became_Complete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Became Complete</label>
    <type>DateTime</type>
</CustomField>