force-app/main/default/objects/Enrollment_Component_Affiliation__c/fields/Deferral_Date__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deferral Date</label>
    <type>Date</type>
</CustomField>