force-app/main/default/objects/Enrollment_Component_Affiliation__c/fields/EC_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>EC_Record_Type__c</fullName>
    <description>Initially added to calculate the % complete on the PR</description>
    <label>EC Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Question Group</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>Stage</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Flag</fullName>
            </value>
            <value>
                <fullName>Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>