force-app/main/default/objects/Enrollment_Component_Affiliation__c/fields/ECACriteriaCheck__c.field-meta.xml
<CustomField>
    <fullName>ECACriteriaCheck__c</fullName>
    <formula>IF((Enrollment_Component__r.Assignment_Logic__c != &apos;&apos; || Enrollment_Component__r.Completion_Logic__c != &apos;&apos;), true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECACriteriaCheck</label>
    <type>Checkbox</type>
</CustomField>