force-app/main/default/objects/Enrollment_Component_Affiliation__c/fields/Enrollment_Component__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Component__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Only Applicable to &quot;Form&quot; type Enrollment Components.  All children are derived.</inlineHelpText>
    <label>Enrollment Component</label>
    <referenceTo>Enrollment_Component__c</referenceTo>
    <relationshipLabel>Enrollment Component Affiliation</relationshipLabel>
    <relationshipName>Enrollment_Component_Affiliation</relationshipName>
    <type>Lookup</type>
</CustomField>