force-app/main/default/objects/Enrollment_Component_Affiliation__c/fields/Is_Dirty__c.field-meta.xml
<CustomField>
    <fullName>Is_Dirty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of the ECA rewrite.  This checkbox will be marked when criteria is updated that may impact the status of an ECA.  Updated by the trigger on the ProgramEnrollmentCriteria object.</description>
    <label>Is Dirty</label>
    <type>Checkbox</type>
</CustomField>