force-app/main/default/objects/Enrollment_Component_Affiliation__c/fields/TestingRe_enrollment__c.field-meta.xml
<CustomField>
    <fullName>TestingRe_enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestingRe-enrollment</label>
    <type>Checkbox</type>
</CustomField>