force-app/main/default/objects/Enrollment_Component_Affiliation__c/validationRules/ECA_DeferredDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ECA_DeferredDateRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Deferred&apos;),  ISBLANK( Deferral_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Deferral_Date__c</errorDisplayField>
    <errorMessage>For status &apos;Deferred&apos; , Deferral date field is required.</errorMessage>
</ValidationRule>