force-app/main/default/objects/Enrollment_Component_Affiliation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Enrollment__c</columns>
    <columns>Enrollment_Component__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>